--- a/README
+++ b/README
@@ -1,5 +1,12 @@
-Kafka package version 0.10
+Kafka package version 0.10-CB01
 ==========================
+
+WARNING
+
+This is a fork of the original Kafka Perl modules. This fork is a work in
+progress on implementing the new protocol for Kafka 0.8.
+
+INTRO
 
 The Kafka package is a set of Perl modules which provides a
 simple and consistent application programming interface (API) to the
