--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Kafka package
 
+0.20  Mon Feb  25 2013
+    CHANGES:
+    - Initial prototype support for Kafka 0.8 protocol
+
 0.10  Thu Feb  07 2013
     CHANGES:
     - 03_kafka_bench.t does not depend on previous tests
